--- a/index.html
+++ b/index.html
@@ -408,29 +408,28 @@
             </div>
             <div class="column-container social">
               <h3 class="title">Be social</h3>
-
               <a href="#!">
-                <div>
+                <span>
                   <img src="./assets/img/footer/Vectortwiter.svg" alt="" />
-                </div>
+                </span>
                 Twitter</a
               >
               <a href="#!">
-                <div>
+                <span>
                   <img src="./assets/img/footer/Vectorfacebook.svg" alt="" />
-                </div>
+                </span>
                 Facebook</a
               >
               <a href="#!">
-                <div>
+                <span>
                   <img src="./assets/img/footer/Group 109insta.svg" alt="" />
-                </div>
+                </span>
                 Instagram</a
               >
               <a href="#!">
-                <div>
+                <span>
                   <img src="./assets/img/footer/Group 113link.svg" alt="" />
-                </div>
+                </span>
                 Linkedin</a
               >
             </div>
